# TrodesRippleDisruptionModule

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui
firmware/pico/: CMakeLists.txt  README.md  source.c  stim-pulser.elf
firmware/raspb-pi/: README.md  fakeserver.c  stimserver.c
include/: ZmqSourceSubscriber.h  mainwindow.h  moduledefines.h  ripplepower.h  stiminterface.h  trodesinterface.h
resources/: ExampleRippleDetectorConfig.xml
src/: Util.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  ripplepower.cpp  stiminterface.cpp  trodesinterface.cpp
